tests/substructural/hll_diagnostics_sub.err.expected
error: at 6:13: [SUB-CopyOfNonCopy] In function 'copy_of_non_copy': cannot copy non-Copy type &mut i64
   |
 5 | fn copy_of_non_copy(r: &mut i64) {
 6 |     let y = r;
   |             ^
 7 |     let z = r;
   |
  hint: since the type is not Copy, try moving it instead using 'move'
error: at 7:13: [SUB-CopyOfNonCopy] In function 'copy_of_non_copy': cannot copy non-Copy type &mut i64
   |
 6 |     let y = r;
 7 |     let z = r;
   |             ^
 8 | }
   |
  hint: since the type is not Copy, try moving it instead using 'move'
